# Data-Downloader

./: README.md  setup.cfg  setup.py
Downloader/: HYCOM.py  utils.py
Downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
downloader/: ERA5.py
